I have wrestled the assets and views into a way that does not hurt my eyes too much

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,6 @@
     <div class="jumbotron">
-      <img class="pull-left" src="fairview_logo.png"/>
-      <img class="pull-right" src="fairview_logo.png"/>
+      <img class="pull-left" src="images/fairview_logo.png"/>
+      <img class="pull-right" src="images/fairview_logo.png"/>
       <h1>Best Movies of 2013</h1>
       <p class="lead">Vote which movie is better!</p>
     </div>
