Start vote handler
Also had to add sqlite3 to Gemfile
Added jquery to do POSTs back to the server

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,8 @@
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
+    <script src="js/jquery-2.0.3.min.js"></script>
+    <script src="js/voting.js"></script>
   </head>
   <body>
 	  <%= yield %>
