--- a/views/home.erb
+++ b/views/home.erb
@@ -6,17 +6,13 @@
     </div>
     <div class="container">
       <div class="row">
-	<div class="col-md-6">
-	  <a href="#">
-	    <img id="movieImg1" class="center-block" src="images/AGoodDayToDieHard.jpg"/>
-	    <h4 id="movieTitle1" class="text-center">A Good Day To Die Hard</h4>
-	  </a>
+	<div id="movie1" class="col-md-6" title="Vote for A Good Day To Die Hard">
+	  <img id="movieImg1" class="center-block" src="images/AGoodDayToDieHard.jpg"/>
+	  <h4 id="movieTitle1" class="text-center">A Good Day To Die Hard</h4>
 	</div>
-	<div class="col-md-6">
-	  <a href="#">
-	    <img id="movieImg2" class="center-block" src="images/AGoodDayToDieHard.jpg"/>
-	    <h4 id="movieTitle2" class="text-center">A Good Day To Die Hard</h4>
-	  </a>
+	<div id="movie2" class="col-md-6" title="Vote for A Good Day To Die Hard">
+	  <img id="movieImg2" class="center-block" src="images/AGoodDayToDieHard.jpg"/>
+	  <h4 id="movieTitle2" class="text-center">A Good Day To Die Hard</h4>
 	</div>
       </div>
     </div>
