--- a/views/home.erb
+++ b/views/home.erb
@@ -6,11 +6,11 @@
     </div>
     <div class="container">
       <div class="row">
-	  <div id="movie1" class="col-md-6 no-frame" title="<%= @movie_1.title %>">
+	  <div id="<%= @movie_1.id %>" class="col-md-6 no-frame movie1" title="<%= @movie_1.title %>">
 	  <img id="movieImg1" class="center-block" src="images/<%= @movie_1.poster %>"/>
 	  <h4 id="movieTitle1" class="text-center"><%= @movie_1.title %></h4>
 	</div>
-	<div id="movie2" class="col-md-6 no-frame" title="<%= @movie_2.title %>">
+	<div id="<%= @movie_2.id %>" class="col-md-6 no-frame movie2" title="<%= @movie_2.title %>">
 	  <img id="movieImg2" class="center-block" src="images/<%= @movie_2.poster %>"/>
 	  <h4 id="movieTitle2" class="text-center"><%= @movie_2.title %></h4>
 	</div>
