--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,12 @@
     <script src="js/voting.js"></script>
   </head>
   <body>
+    <div class="jumbotron">
+      <img class="pull-left" src="images/fairview_logo.png"/>
+      <img class="pull-right" src="images/fairview_logo.png"/>
+      <h1>Best Movies of 2013</h1>
+      <p class="lead">Vote which movie is better!</p>
+    </div>
 	  <%= yield %>
   </body>
   </html>
