--- a/views/leaderboard.erb
+++ b/views/leaderboard.erb
@@ -10,11 +10,12 @@
 			<th>Movie Title</th>
 			<th>Votes</th>
 		</tr>
-		<% @movies.each do |movie| %>
+
+		<% @movies.each_with_index do |movie, n| %>
 			<tr>
-			<td><%= 1 %></td>
-			<td><%= movie.title %></td>	
-			<td><%= movie.score %></td>
+				<td><%= n %></td>
+				<td><%= movie.title %></td>
+				<td><%= movie.score %></td>
 			</tr>
 		<% end %>
 	    
