--- a/views/home.erb
+++ b/views/home.erb
@@ -1,22 +1,17 @@
-    <div class="container">
-      <div class="row">
-	  <div id="<%= @movie_1.id %>" class="col-md-6 no-frame movie1" title="<%= @movie_1.title %>">
-	  <img id="movieImg1" class="center-block" src="images/<%= @movie_1.poster %>"/>
-	  <h4 id="movieTitle1" class="text-center"><%= @movie_1.title %></h4>
-	</div>
-	<div id="<%= @movie_2.id %>" class="col-md-6 no-frame movie2" title="<%= @movie_2.title %>">
-	  <img id="movieImg2" class="center-block" src="images/<%= @movie_2.poster %>"/>
-	  <h4 id="movieTitle2" class="text-center"><%= @movie_2.title %></h4>
-	</div>
-      </div>
-    </div>
+<div class="row">
+  <div id="<%= @movie_1.id %>" class="col-md-6 no-frame movie1" title="<%= @movie_1.title %>">
+    <img id="movieImg1" class="center-block" src="images/<%= @movie_1.poster %>"/>
+    <h4 id="movieTitle1" class="text-center"><%= @movie_1.title %></h4>
+  </div>
 
-    <div class="container">
-    <div class="row">
-	    <div class="col-md-5"></div>
-	    <div class="col-md-2">
-		    <a href="/leaderboard"><h3>Leaderboard</h3></a>
-	    </div>
-	    <div class="col-md-5"></div>
-    </div>
-    </div>
+  <div id="<%= @movie_2.id %>" class="col-md-6 no-frame movie2" title="<%= @movie_2.title %>">
+    <img id="movieImg2" class="center-block" src="images/<%= @movie_2.poster %>"/>
+    <h4 id="movieTitle2" class="text-center"><%= @movie_2.title %></h4>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-2 col-md-offset-5">
+    <a href="/leaderboard"><h3>Leaderboard</h3></a>
+  </div>
+</div>
