--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,6 +17,9 @@
       <h1>Best Movies of 2013</h1>
       <p class="lead">Vote which movie is better!</p>
     </div>
-	  <%= yield %>
+
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
   </html>
