add leaderboard skeleton

--- a/views/leaderboard.erb
+++ b/views/leaderboard.erb
@@ -1,1 +1,19 @@
-Leaderboard!
+<div class="col-md-8 col-md-offset-2">
+  <div class="panel panel-default">
+    <div class="panel-heading">Top 50 Ranking</div>
+
+    <table class="table table-striped">
+      <tr>
+        <th>Place</th>
+        <th>Movie Title</th>
+        <th>Votes</th>
+      </tr>
+    </table>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-2 col-md-offset-5">
+    <a href="/"><h3>Vote</h3></a>
+  </div>
+</div>
